<resources>
    <string name="app_name">Ma Journee</string>
    <string name="weather">Clima</string>
    <string name="top_music">Música</string>
    <string name="shop">Tienda</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="closed_drawer">Drawer Closed</string>
    <string name="user_name">Christian Meazza</string>
    <string name="user_mail">christianmeazza@gmail.com</string>
    <string name="item">item</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="not_found_user">User not found</string>
    <string name="error">Unexpected Error</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="daily_weather">Daily Weather</string>
    <string name="hourly_weather">Hourly Weather</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_placeholder">%d°C</string>
    <string name="precipitation">Precipitation</string>
    <string name="precipitation_placeholder">%d%%</string>
    <string name="bogota">Bogotá, Colombia</string>
    <string name="summary_week">Summary Of The Week</string>
</resources>
